--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.738.0",
+    "@aws-sdk/client-ssm": "^3.744.0",
     "@aws-sdk/lib-dynamodb": "^3.738.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
