--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/lib-dynamodb": "^3.738.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "openai": "^4.82.0",
