--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,9 @@ before_script:
   - mkdir -p ~/.ssh
   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
   - chmod 600 ~/.ssh/id_rsa
-  - echo "$OPENAI_API_KEY" > .env
+  # Ensure .env file is created from environment variables
+  - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > .env
+
 
 install_frontend:
   image: node:18
