--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,6 @@ before_script:
   - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > frontend/.env
   - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > backend/.env
 
-
-
 install_frontend:
   image: node:18
   stage: install
@@ -39,6 +37,10 @@ install_backend:
   script:
     - cd backend/src
     - npm install
+  cache:
+    key: npm-backend
+    paths:
+      - backend/src/node_modules/
   tags:
     - frontend
 
@@ -76,9 +78,9 @@ deploy_backend:
   image: node:18
   stage: deploy
   script:
-    - cd backend
+    - cd backend/src
     - ssh user@your-server-ip 'cd /path/to/backend && git pull && npm ci && pm2 restart server'
   only:
-    - frontEnd
+    - main  # or adjust this based on the branch for backend deploy
   tags:
     - frontend
