--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.10.2",
     "@aws-amplify/ui-react": "^6.9.1",
-    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "amplify": "^0.0.11",
     "aws": "^0.0.3-2",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "express": "^4.21.2",
+    "jest": "^28.0.0",  
     "oidc-client-ts": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,8 +28,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",  
-    "test": "react-scripts test",
+    "build": "CI=false react-scripts build",
+    "test": "react-scripts test",  
+    "test:ci": "CI=true react-scripts test --ci --runInBand", 
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx"
   },
