--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,25 @@
 stages:
   - install
   - build
-  - test
+  - test    # Add the test stage here
   - deploy
+
+variables:
+  NODE_ENV: test
+
+before_script:
+  # Clean up any existing git lock files
+  - rm -f .git/index.lock
+  - rm -f .git/config.lock
+  - node -v
+  - npm -v
+  # Set up SSH keys and environment variables
+  - mkdir -p ~/.ssh
+  - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+  - chmod 600 ~/.ssh/id_rsa
+  # Ensure .env file is created from environment variables for both frontend and backend
+  - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > frontend/.env
+  - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > backend/.env
 
 install_frontend:
   image: node:20
@@ -14,21 +31,40 @@ install_frontend:
     key: npm-frontend
     paths:
       - frontend/node_modules/
+  tags:
+    - frontend
+  variables:
+    GIT_DEPTH: 0  # Disable shallow cloning
+
+install_backend:
+  image: node:20
+  stage: install
+  script:
+    - cd backend/src
+    - npm install 
+  tags:
+    - frontend
 
 build_frontend:
   image: node:18
   stage: build
   dependencies:
     - install_frontend
+  cache:
+    key: npm-frontend
+    paths:
+      - frontend/node_modules/
   script:
     - cd frontend
     - npm run build
+  tags:
+    - frontend
   artifacts:
     paths:
       - frontend/build/
     expire_in: 1h
 
-test_frontend:
+test_frontend:  # Add the test stage
   image: node:20
   stage: test
   dependencies:
@@ -40,6 +76,8 @@ test_frontend:
     key: npm-frontend
     paths:
       - frontend/node_modules/
+  tags:
+    - frontend
 
 deploy_frontend:
   image: node:18
@@ -47,6 +85,10 @@ deploy_frontend:
   script:
     - cd frontend
     - mv build public  # GitLab Pages looks for the public folder
+  only:
+    - frontEnd
+  tags:
+    - frontend
 
 deploy_backend:
   image: node:18
@@ -54,3 +96,7 @@ deploy_backend:
   script:
     - cd backend/src
     - ssh user@your-server-ip 'cd /path/to/backend && git pull && npm ci && pm2 restart server'
+  only:
+    - main  # or adjust this based on the branch for backend deploy
+  tags:
+    - frontend
