--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "amazon-cognito-identity-js": "^6.3.12",
+    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
     "amplify": "^0.0.11",
     "aws": "^0.0.3-2",
     "aws-amplify": "^6.12.3",
