--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.10.2",
     "@aws-amplify/ui-react": "^6.9.1",
+    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "amazon-cognito-identity-js": "^6.3.12",
-    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
     "amplify": "^0.0.11",
     "aws": "^0.0.3-2",
     "aws-amplify": "^6.12.3",
@@ -17,12 +17,12 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "express": "^4.21.2",
-    "jest": "^28.0.0",  
+    "jest": "^28.0.0",
     "oidc-client-ts": "^3.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-oidc-context": "^3.2.0",
-    "react-router-dom": "^7.1.5",
+    "react-router": "^6.29.0",
+    "react-router-dom": "^6.29.0",
     "react-scripts": "^5.0.1",
     "sweng_group7": "file:",
     "web-vitals": "^4.2.4"
@@ -30,10 +30,16 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
-    "test": "react-scripts test",  
-    "test:ci": "CI=true react-scripts test --ci --runInBand", 
+    "test": "react-scripts test",
+    "test:ci": "CI=true react-scripts test --ci --runInBand",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
+      "^.+\\.css$": "jest-transform-stub"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -54,8 +60,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
+    "jest-transform-stub": "^2.0.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0"
   }
