--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,9 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.10.2",
     "@aws-amplify/ui-react": "^6.9.1",
-    "@aws-sdk/client-cognito-identity-provider": "^3.744.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.750.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.750.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "amplify": "^0.0.11",
     "aws": "^0.0.3-2",
@@ -20,11 +19,11 @@
     "express": "^4.21.2",
     "jest": "^28.0.0",
     "oidc-client-ts": "^3.1.0",
-  
     "react-oidc-context": "^3.2.0",
     "react-scripts": "^5.0.1",
     "sweng_group7": "file:",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "which": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,13 +33,12 @@
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx"
   },
- "jest": {
-  "transform": {
-    "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
-    "^.+\\.css$": "jest-transform-stub"
-  }
-},
-
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
+      "^.+\\.css$": "jest-transform-stub"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
