--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jest": "^28.0.0",
     "oidc-client-ts": "^3.1.0",
     "react-oidc-context": "^3.2.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "sweng_group7": "file:",
     "web-vitals": "^4.2.4",
