--- a/backend/src/handlers/generateChat/package.json
+++ b/backend/src/handlers/generateChat/package.json
@@ -25,6 +25,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "generateRoleplay": "file:",
+        "multer": "^1.4.5-lts.1",
         "openai": "^4.82.0"
     }
 }
