--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-dynamodb": "^3.738.0",
     "@aws-sdk/client-ssm": "^3.744.0",
     "@aws-sdk/lib-dynamodb": "^3.738.0",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
