--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-dynamodb": "^3.738.0",
     "@aws-sdk/client-ssm": "^3.744.0",
     "@aws-sdk/lib-dynamodb": "^3.738.0",
+    "aws-multipart-parser": "^0.2.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -21,6 +22,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "openai": "^4.82.0",
     "src": "file:"
   }
