--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,29 +87,32 @@ deploy_frontend:
     - docker
 
 test_backend_lambda:
-  image:
-    name: amazon/aws-cli:latest
-    entrypoint: [""]
   stage: test
   tags:
     - docker
+  image:
+    name: amazon/aws-cli:latest
+    entrypoint: [""]
   before_script:
+    - echo "Checking AWS CLI version..."
     - cd backend/src
-    - echo "Using AWS CLI:"
     - aws --version
   script:
-    - echo "Testing Lambda: generateRoleplay"
+    - echo "Invoking AWS Lambda function 'generateRoleplay'..."
     - aws lambda invoke --function-name generateRoleplay --payload fileb://src/tests/payloads/roleplay/generateRoleplay.json generateRoleplay_output.json --log-type Tail
     - cat generateRoleplay_output.json
 
-    - echo "Testing Lambda: getRoleplayHistory"
+    - echo "Invoking AWS Lambda function 'getRoleplayHistory'..."
     - aws lambda invoke --function-name getRoleplayHistory --payload fileb://src/tests/payloads/roleplay/getRoleplayHistory.json getRoleplayHistory_output.json --log-type Tail
     - cat getRoleplayHistory_output.json
 
-    - echo "Testing Lambda: saveRoleplayHistory"
+    - echo "Invoking AWS Lambda function 'saveRoleplayHistory'..."
     - aws lambda invoke --function-name saveRoleplayHistory --payload fileb://src/tests/payloads/roleplay/saveRoleplayHistory.json saveRoleplayHistory_output.json --log-type Tail
     - cat saveRoleplayHistory_output.json
   only:
     - backend
+
+
+
 
 
