fix roleplay CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,77 +14,6 @@ before_script:
   - mkdir -p ~/.ssh
   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
   - chmod 600 ~/.ssh/id_rsa
-  - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > frontend/.env
-  - echo "OPENAI_API_KEY=$OPENAI_API_KEY" > backend/.env
-
-# install_frontend:
-#   image: node:20
-#   stage: install
-#   script:
-#     - cd frontend
-#     - npm install
-#   cache:
-#     key: npm-frontend
-#     paths:
-#       - frontend/node_modules/
-#   tags:
-#     - docker  
-#   variables:
-#     GIT_DEPTH: 0
-
-# install_backend:
-#   image: node:20
-#   stage: install
-#   script:
-#     - cd backend/src
-#     - npm install
-#   tags:
-#     - docker
-
-# build_frontend:
-#   image: node:20
-#   stage: build
-#   dependencies:
-#     - install_frontend
-#   cache:
-#     key: npm-frontend
-#     paths:
-#       - frontend/node_modules/
-#   script:
-#     - cd frontend
-#     - npm run build
-#   tags:
-#     - docker
-#   artifacts:
-#     paths:
-#       - frontend/build/
-#     expire_in: 1h
-
-# test_frontend:
-#   image: node:20
-#   stage: test
-#   dependencies:
-#     - install_frontend
-#   script:
-#     - cd frontend
-#     - npm run test:ci
-#   cache:
-#     key: npm-frontend
-#     paths:
-#       - frontend/node_modules/
-#   tags:
-#     - docker
-
-# deploy_frontend:
-#   image: node:18
-#   stage: deploy
-#   script:
-#     - cd frontend
-#     - mv build public
-#   only:
-#     - frontend
-#   tags:
-#     - docker
 
 test_backend_lambda:
   stage: test
@@ -99,15 +28,15 @@ test_backend_lambda:
     - aws --version
   script:
     - echo "Invoking AWS Lambda function 'generateRoleplay'..."
-    - aws lambda invoke --function-name generateRoleplay --payload fileb://tests/payloads/roleplay/generateRoleplay.json generateRoleplay_output.json --log-type Tail
+    - aws lambda invoke --function-name generateRoleplay --payload fileb://tests/payloads/generateRoleplay/generateRoleplay.json generateRoleplay_output.json --log-type Tail
     - cat generateRoleplay_output.json
 
     - echo "Invoking AWS Lambda function 'getRoleplayHistory'..."
-    - aws lambda invoke --function-name getRoleplayHistory --payload fileb://tests/payloads/roleplay/getRoleplayHistory.json getRoleplayHistory_output.json --log-type Tail
+    - aws lambda invoke --function-name generateRoleplay --payload fileb://tests/payloads/generateRoleplay/getRoleplayHistory.json getRoleplayHistory_output.json --log-type Tail
     - cat getRoleplayHistory_output.json
 
     - echo "Invoking AWS Lambda function 'saveRoleplayHistory'..."
-    - aws lambda invoke --function-name saveRoleplayHistory --payload fileb://tests/payloads/roleplay/saveRoleplayHistory.json saveRoleplayHistory_output.json --log-type Tail
+    - aws lambda invoke --function-name generateRoleplay --payload fileb://tests/payloads/generateRoleplay/saveRoleplayHistory.json saveRoleplayHistory_output.json --log-type Tail
     - cat saveRoleplayHistory_output.json
   only:
     - backend
